# project-restoration

./: .clang-format  .gitignore  .gitmodules  DevkitArm3DS.cmake  Makefile  make_aiming_speed_patch.py  make_release.sh  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
hooks/: main.hks  rst_boss_goht.hks  rst_boss_gyorg.hks  rst_boss_odolwa.hks  rst_boss_twinmold.hks  rst_camera.hks  rst_console_sound.hks  rst_fast_transform.hks  rst_goron_roll.hks  rst_ice_arrow.hks  rst_isg,hks  rst_keeta.hks  rst_large_screen.hks  rst_ocarina.hks  rst_player.hks  rst_revision_differences.hks  rst_sot_saving.hks  rst_stone_tower.hks  rst_time.hks  rst_ui_schedule.hks  rst_zora_swim.hks
loader/: CMakeLists.txt  Makefile  linker_template.ld
loader/source/: hooks.hks  loader.c  svc.s
source/: CMakeLists.txt
source/common/: bitfield.h  context.cpp  context.h  debug.cpp  debug.h  flags.h  span.h  svc.s  types.h  utils.h
source/game/: actor.cpp  actor.h  as.cpp  as.h  camera.cpp  camera.h  collision.cpp  collision.h  common_data.cpp  common_data.h  context.cpp  context.h  items.cpp  items.h  memory.cpp  memory.h  message.cpp  message.h  pad.cpp  pad.h  player.cpp  player.h  random.cpp  random.h  scene.h  sound.cpp  sound.h  state.cpp  state.h  state_ending.h  state_sot_save.cpp  state_sot_save.h  static_context.cpp  static_context.h  ui.cpp  ui.h
source/game/actors/: boss_goht.h  boss_gyorg.h  boss_odolwa.h  boss_twinmold.h  npc_bombers.h  obj_elegy_statue.h  obj_owl_statue.h  obj_stone_tower_block.h
source/game/states/: state.cpp  state_ending.h  state_sot_save.cpp  state_sot_save.h
source/game/ui/: message_text.cpp  message_text.h  message_window.h  num_all.cpp  res.cpp  res.h
source/game/ui/layouts/: item_icon.cpp  item_icon.h  message_window.h  num_all.cpp  num_all.h  play_action_icon.h  play_hud.h
source/game/ui/screens/: gear_screen.h  main_screen.cpp  main_screen.h  schedule_screen.h  screen.h
source/lib/imgui_sw/: imgui_sw.cpp
source/rst/: camera.cpp  camera.h  fixes.cpp  fixes.h  input.cpp  large_screen.cpp  link.cpp  link.h  main.cpp  message.cpp  trampolines.s
source/rst/fixes/: boss.cpp  boss.h  boss.s  obj_stone_tower_block.cpp  ocarina.cpp  time.cpp  time.h
v100/: Version.cmake  hooks.hks
v110/: Version.cmake  hooks.hks
